--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
         <div class="row">
             <div class="pelicula1 col-3">
                 <h4>1.1/10</h4>
-                <img src="./multimedia/Peliculas/1 m.jpg" alt="Mujer maravilla" class="img-fluid">
+                <img src="multimedia/peliculas/1 m.jpg" alt="Mujer maravilla" class="img-fluid">
             </div>
             <div class="pelicula2 col-3">
                 <h4>1.2/10</h4>
-                <img src="./multimedia/Peliculas/2 m.jpg" alt="Justice League" class="img-fluid">
+                <img src="multimedia/peliculas/2 m.jpg" alt="Justice League" class="img-fluid">
             </div>
             <div class="pelicula3 col-3">
                 <h4>2.0/10</h4>
-                <img src="./multimedia/Peliculas/3 m.jpg" alt="Muerte en el Nilo" class="img-fluid">
+                <img src="multimedia/peliculas/3 m.jpg" alt="Muerte en el Nilo" class="img-fluid">
             </div>
             <div class="pelicula4 col-3">
                 <h4>2.1/10</h4>
-                <img src="./multimedia/Peliculas/4 m.jpg" alt="Jurassica world" class="img-fluid">
+                <img src="multimedia/peliculas/4 m.jpg" alt="Jurassica world" class="img-fluid">
             </div>
         </div>
     </section>
@@ -274,19 +274,19 @@
         <div class="row">
             <div class="pelicula5 col-3">
                 <h4>3.0/10</h4>
-                <img src="./multimedia/Peliculas/5 m.jpg" alt="Los crimenes de Grindelwald" class="img-fluid">
+                <img src="multimedia/peliculas/5 m.jpg" alt="Los crimenes de Grindelwald" class="img-fluid">
             </div>
             <div class="pelicula6 col-3">
                 <h4>3.1/10</h4>
-                <img src="./multimedia/Peliculas/6 m.jpg" alt="Star wars 9" class="img-fluid">
+                <img src="multimedia/peliculas/6 m.jpg" alt="Star wars 9" class="img-fluid">
             </div>
             <div class="pelicula7 col-3">
                 <h4>3.4/10</h4>
-                <img src="./multimedia/Peliculas/7 m.jpg" alt="La momia" class="img-fluid">
+                <img src="multimedia/peliculas/7 m.jpg" alt="La momia" class="img-fluid">
             </div>
             <div class="pelicula8 col-3">
                 <h4>3.5/10</h4>
-                <img src="./multimedia/Peliculas/8 m.jpg" alt="Baywatch" class="img-fluid">
+                <img src="multimedia/peliculas/8 m.jpg" alt="Baywatch" class="img-fluid">
             </div>
         </div>
     </section>
