--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -62,19 +62,19 @@
         <div class="row">
             <div class="pelicula1 col-3">
                 <h4>1.1/10</h4>
-                <img src="../multimedia/Peliculas/1 m.jpg" alt="Mujer maravilla" class="img-fluid">
+                <img src="../multimedia/peliculas/1 m.jpg" alt="Mujer maravilla" class="img-fluid">
             </div>
             <div class="pelicula2 col-3">
                 <h4>1.2/10</h4>
-                <img src="../multimedia/Peliculas/2 m.jpg" alt="Justice League" class="img-fluid">
+                <img src="../multimedia/peliculas/2 m.jpg" alt="Justice League" class="img-fluid">
             </div>
             <div class="pelicula3 col-3">
                 <h4>2.0/10</h4>
-                <img src="../multimedia/Peliculas/3 m.jpg" alt="Muerte en el Nilo" class="img-fluid">
+                <img src="../multimedia/peliculas/3 m.jpg" alt="Muerte en el Nilo" class="img-fluid">
             </div>
             <div class="pelicula4 col-3">
                 <h4>2.1/10</h4>
-                <img src="../multimedia/Peliculas/4 m.jpg" alt="Jurassica world" class="img-fluid">
+                <img src="../multimedia/peliculas/4 m.jpg" alt="Jurassica world" class="img-fluid">
             </div>
         </div>
     </section>
@@ -93,15 +93,15 @@
                     <div class="carousel-inner">
                         <h2>Imágenes promocionales</h2>
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="../multimedia/Promocionales/Morbius I.jpg"
+                            <img class="d-block w-100" src="../multimedia/promocionales/Morbius I.jpg"
                                 alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../multimedia/Promocionales/Morbius II.jpg"
+                            <img class="d-block w-100" src="../multimedia/promocionales/Morbius II.jpg"
                                 alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../multimedia/Promocionales/Morbius III.jpg"
+                            <img class="d-block w-100" src="../multimedia/promocionales/Morbius III.jpg"
                                 alt="Third slide">
                         </div>
                     </div>
@@ -122,11 +122,11 @@
     <section class="container-fluid multimediaEscenas">
         <h2>Morbiescenas</h2>
         <div class="row">
-            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/Escenas/Milo baile.jpg" alt=""
+            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/escenas/Milo baile.jpg" alt=""
                     class="img-fluid"></div>
-            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/Escenas/Milo metro.jpg" alt=""
+            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/escenas/Milo metro.jpg" alt=""
                     class="img-fluid"></div>
-            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/Escenas/Pelea.jpg" alt=""
+            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/escenas/Pelea.jpg" alt=""
                     class="img-fluid"></div>
         </div>
     </section>
@@ -135,11 +135,11 @@
     <section class="container-fluid multimediaReparto">
         <h2>Reparto</h2>
         <div class="row">
-            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/Elenco/adria.jpg" alt=""
+            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/elenco/adria.jpg" alt=""
                     class="img-fluid"></div>
-            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/Elenco/jared.jpg" alt=""
+            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/elenco/jared.jpg" alt=""
                     class="img-fluid"></div>
-            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/Elenco/matt.jpg" alt=""
+            <div class="col-xs-12 col-md-4"><img width="300px" src="../multimedia/elenco/matt.jpg" alt=""
                     class="img-fluid"></div>
         </div>
     </section>
@@ -163,19 +163,19 @@
         <div class="row">
             <div class="pelicula5 col-3">
                 <h4>3.0/10</h4>
-                <img src="../multimedia/Peliculas/5 m.jpg" alt="Los crimenes de Grindelwald" class="img-fluid">
+                <img src="../multimedia/peliculas/5 m.jpg" alt="Los crimenes de Grindelwald" class="img-fluid">
             </div>
             <div class="pelicula6 col-3">
                 <h4>3.1/10</h4>
-                <img src="../multimedia/Peliculas/6 m.jpg" alt="Star wars 9" class="img-fluid">
+                <img src="../multimedia/peliculas/6 m.jpg" alt="Star wars 9" class="img-fluid">
             </div>
             <div class="pelicula7 col-3">
                 <h4>3.4/10</h4>
-                <img src="../multimedia/Peliculas/7 m.jpg" alt="La momia" class="img-fluid">
+                <img src="../multimedia/peliculas/7 m.jpg" alt="La momia" class="img-fluid">
             </div>
             <div class="pelicula8 col-3">
                 <h4>3.5/10</h4>
-                <img src="../multimedia/Peliculas/8 m.jpg" alt="Baywatch" class="img-fluid">
+                <img src="../multimedia/peliculas/8 m.jpg" alt="Baywatch" class="img-fluid">
             </div>
         </div>
     </section>
